FULLY WORKING CLUSTER CREATION FINALLY

--- a/ansible/roles/prep/tasks/1password.yml
+++ b/ansible/roles/prep/tasks/1password.yml
@@ -12,9 +12,9 @@
         name: 1password
         description: 1Password Stable Channel
         baseurl: https://downloads.1password.com/linux/rpm/stable/$basearch
-        enabled: yes
-        gpgcheck: yes
-        repo_gpgcheck: yes
+        enabled: true
+        gpgcheck: true
+        repo_gpgcheck: true
         gpgkey: https://downloads.1password.com/linux/keys/1password.asc
       become: true
 
@@ -22,7 +22,7 @@
       ansible.builtin.dnf:
         name: 1password
         state: present
-        update_cache: yes
+        update_cache: true
       become: true
 
 - name: Install 1Password CLI on Fedora/RHEL
@@ -39,9 +39,9 @@
         name: 1password
         description: 1Password Stable Channel
         baseurl: https://downloads.1password.com/linux/rpm/stable/$basearch
-        enabled: yes
-        gpgcheck: yes
-        repo_gpgcheck: yes
+        enabled: true
+        gpgcheck: true
+        repo_gpgcheck: true
         gpgkey: https://downloads.1password.com/linux/keys/1password.asc
         state: present
 
@@ -49,7 +49,7 @@
       ansible.builtin.dnf:
         name: 1password-cli
         state: present
-        update_cache: yes
+        update_cache: true
 
 - name: Install 1Password on Debian/Ubuntu
   become: true
@@ -94,7 +94,7 @@
     - name: Convert debsig key to binary .gpg (one-time)
       ansible.builtin.command:
         cmd: >
-          gpg --dearmor --batch --yes
+          gpg --dearmor --batch --true
           --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
           /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.asc
         creates: /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
@@ -104,7 +104,7 @@
       ansible.builtin.apt:
         name: 1password
         state: present
-        update_cache: yes
+        update_cache: true
         cache_valid_time: 3600
 
 - name: Install 1Password CLI on Debian/Ubuntu
@@ -153,7 +153,7 @@
     - name: Convert debsig key to binary format
       ansible.builtin.command:
         cmd: >
-          gpg --dearmor --batch --yes
+          gpg --dearmor --batch --true
           --output /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
           /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.asc
         creates: /usr/share/debsig/keyrings/AC2D62742012EA22/debsig.gpg
@@ -163,5 +163,5 @@
       ansible.builtin.apt:
         name: 1password-cli
         state: present
-        update_cache: yes
+        update_cache: true
         cache_valid_time: 3600
