--- a/ansible/roles/proxmox/tasks/cluster-setup.yml
+++ b/ansible/roles/proxmox/tasks/cluster-setup.yml
@@ -1,94 +1,36 @@
-- name: Disable Proxmox Enterprise APT repo
-  ansible.builtin.lineinfile:
-    path: /etc/apt/sources.list.d/pve-enterprise.list
-    regexp: '^deb https://enterprise\.proxmox\.com/debian/pve'
-    line: "# deb https://enterprise.proxmox.com/debian/pve bookworm pve-enterprise"
-    state: present
+- name: Detect existing cluster
+  ansible.builtin.stat:
+    path: /etc/pve/corosync.conf
+  register: corosync_cfg
   become: true
 
-- name: Disable Ceph Enterprise APT repo
-  ansible.builtin.lineinfile:
-    path: /etc/apt/sources.list.d/ceph.list
-    regexp: '^deb https://enterprise\.proxmox\.com/debian/ceph-quincy'
-    line: "# deb https://enterprise.proxmox.com/debian/ceph-quincy bookworm enterprise"
-    state: present
-  become: true
+- name: Create cluster (primary)
+  ansible.builtin.command: >
+    pvecm create {{ proxmox_cluster_name }}
+  when:
+    - inventory_hostname in groups['proxmox_primary']
+    - not corosync_cfg.stat.exists
+  register: cluster_create
+  changed_when: "'already exists' not in cluster_create.stderr"
+# - name: Join cluster (secondaries)
+#   ansible.builtin.command: >
+#     pvecm add {{ hostvars[groups['proxmox_primary'][0]].ansible_host }} --use_ssh true
+#   when:
+#     - inventory_hostname in groups['proxmox_secondaries']
+#     - not corosync_cfg.stat.exists
+#   register: cluster_join
+#   changed_when: "'already exists' not in cluster_join.stderr"
+#   become: true
 
-- name: Enable Proxmox no-subscription APT repo
-  ansible.builtin.copy:
-    dest: /etc/apt/sources.list.d/pve-no-subscription.list
-    content: |
-      deb http://download.proxmox.com/debian/pve bookworm pve-no-subscription
-  become: true
-  notify: Update apt cache
-
-- name: Enable Ceph no-subscription APT repo
-  ansible.builtin.copy:
-    dest: /etc/apt/sources.list.d/ceph-no-subscription.list
-    content: |
-      deb http://download.proxmox.com/debian/ceph-quincy bookworm no-subscription
-  become: true
-  notify: Update apt cache
-
-- name: Update the system fully
-  ansible.builtin.apt:
-    update_cache: yes
-    upgrade: dist
-    autoremove: yes
-  become: true
-
-- name: Install management tools
-  ansible.builtin.apt:
-    name:
-      - vim
-      - htop
-      - net-tools
-      - iftop
-    state: present
-  become: true
-
-- name: Configure /etc/hosts with cluster hosts
-  ansible.builtin.template:
-    src: "{{ role_path }}/files/hosts.j2"
-    dest: /etc/hosts
-    owner: root
-    group: root
-    mode: "0644"
-  become: true
-  notify: Restart networking
-
-- name: Create cluster on primary node
-  ansible.builtin.command:
-    cmd: "pvecm create {{ proxmox_cluster_name }}"
-  when: inventory_hostname in groups['proxmox_primary']
-  become: true
-  register: cluster_creation
-  changed_when: cluster_creation.rc == 0
-  failed_when: cluster_creation.stderr | length > 0 and "already exists" not in cluster_creation.stderr
-
-- name: Wait for cluster creation to complete
-  ansible.builtin.wait_for:
-    port: 8006
-    delay: 10
-    timeout: 60
-  when: inventory_hostname in groups['proxmox_primary'] and cluster_creation is not failed
-
-- name: Join cluster on secondary nodes
-  ansible.builtin.command:
-    cmd: "pvecm add {{ hostvars[groups['proxmox_primary'][0]].ansible_host }}"
-  when: inventory_hostname in groups['proxmox_secondaries']
-  become: true
-
-- name: Check Proxmox cluster status with retries
-  ansible.builtin.command: pvecm status
-  become: true
-  register: cluster_status
-  changed_when: false
-  failed_when: cluster_status.rc != 0
-  run_once: true
-  until:
-    - "'Quorate: Yes' in cluster_status.stdout"
-    - "(cluster_status.stdout | regex_findall('^\\s*\\d+\\s+\\d+\\s+\\S+', multiline=True) | length) >= (groups['proxmox'] | length)"
-  retries: 10
-  delay: 5
-  when: inventory_hostname == groups['proxmox_primary'][0]
+# - name: Wait for quorum
+#   ansible.builtin.command: pvecm status
+#   register: cluster_status
+#   changed_when: false
+#   until:
+#     - "'Quorate: Yes' in cluster_status.stdout"
+#     - (cluster_status.stdout | regex_search('\\d+/\\d+')).split('/')[1] | int
+#       == groups['proxmox'] | length
+#   retries: 12
+#   delay: 10
+#   run_once: true
+#   delegate_to: "{{ groups['proxmox_primary'][0] }}"
