User add and pool created

--- a/ansible/inventories/hosts.ini
+++ b/ansible/inventories/hosts.ini
@@ -4,10 +4,14 @@ sfroeber-amd-fedora-desktop
 [laptops]
 sfroeber-amd-fedora-laptop
 
+[workstations:children]
+desktops
+laptops
+
 [proxmox]
-coachlight-homelab-1 ansible_host=192.168.226.90 fqdn=coachlight-homelab-1.lan
-coachlight-homelab-2 ansible_host=192.168.226.91 fqdn=coachlight-homelab-2.lan
-coachlight-homelab-3 ansible_host=192.168.226.92 fqdn=coachlight-homelab-3.lan
+coachlight-homelab-1 proxmox_ip=192.168.226.90 fqdn=coachlight-homelab-1.lan
+coachlight-homelab-2 proxmox_ip=192.168.226.91 fqdn=coachlight-homelab-2.lan
+coachlight-homelab-3 proxmox_ip=192.168.226.92 fqdn=coachlight-homelab-3.lan
 
 [proxmox_primary]
 coachlight-homelab-1
@@ -17,7 +21,7 @@ coachlight-homelab-2
 coachlight-homelab-3
 
 [home_assistant]
-home-assistant ansible_host=192.168.226.7
+home-assistant home_assistant_ip=192.168.226.7
 
 [fedora_vms]
 coreos-vm-1
