--- a/ansible/group_vars/proxmox.yml
+++ b/ansible/group_vars/proxmox.yml
@@ -1,2 +1,3 @@
 ansible_user: root
-ansible_ssh_common_args: "-o IdentitiesOnly=yes -o PreferredAuthentications=password -o PubkeyAuthentication=no -o StrictHostKeyChecking=no"
+ansible_ssh_private_key_file: "~/.ssh/coachlight-homelab.pem"
+ansible_ssh_common_args: "-o IdentitiesOnly=yes"
