--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,1 +1,1 @@
-ansible_become_pass: "{{ lookup('file', '~/.ansible/become_pass') | trim }}"
+ansible_become_pass: "{{ lookup('community.general.onepassword', 's3wpaur4krdgrdrn24rrqw7ewm', field='password', vault='Stephen and Christine') }}"
