Removed .bu more butane template changes

--- a/ansible/roles/proxmox/tasks/coreos-vm-templating.yml
+++ b/ansible/roles/proxmox/tasks/coreos-vm-templating.yml
@@ -21,6 +21,7 @@
     name: butane
     state: present
   delegate_to: localhost
+  become: true
   run_once: true
 
 - name: Render Butane for control plane (localhost)
