--- a/ansible/roles/proxmox/tasks/main.yml
+++ b/ansible/roles/proxmox/tasks/main.yml
@@ -6,9 +6,5 @@
   ansible.builtin.import_tasks: proxmox-module-prereqs.yml
 - name: Import CoreOS download tasks
   ansible.builtin.import_tasks: coreos-download.yml
-- name: Import CoreOS VM templating tasks
-  ansible.builtin.import_tasks: coreos-vm-templating.yml
-- name: Import VM configuration generation tasks
-  ansible.builtin.import_tasks: generate-vm-config.yml
-- name: Import VM creation tasks
-  ansible.builtin.import_tasks: vm-creation.yml
+- name: Create first control-plane VM (cp1)
+  ansible.builtin.import_tasks: control-plane-1-create.yml
