Adding dev container

--- a/ansible/roles/git_repo_setup/tasks/main.yml
+++ b/ansible/roles/git_repo_setup/tasks/main.yml
@@ -2,8 +2,8 @@
   ansible.builtin.file:
     path: "{{ item }}"
     state: directory
+    mode: "0755"
   loop:
     - ~/GitLab/personal
     - ~/GitLab/work
     - ~/GitHub
-  when: ansible_facts[]
