--- a/ansible/roles/proxmox/tasks/main.yml
+++ b/ansible/roles/proxmox/tasks/main.yml
@@ -8,3 +8,5 @@
   ansible.builtin.import_tasks: coreos-download.yml
 - name: Create first control-plane VM (cp1)
   ansible.builtin.import_tasks: control-plane-1-create.yml
+- name: Create additional control-plane VMs
+  ansible.builtin.import_tasks: control-planes-2-3-create-join.yml
